--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Ledger&family=Neucha&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
+
 body {
-  background-color: hsl(120, 40%, 80%);
-  font-family: "Open Sans","Helvetica",Arial,sans-serif;
+  background-color: #DDC4DD;
+  font-family: "Open Sans", sans-serif;
   line-height: 1.5;
   margin: 0;
   text-align: left;
@@ -16,7 +18,7 @@ body {
 
 #columns .card {
   background-clip: border-box;
-  background-color: Snow;
+  background-color: snow;
   border-radius: 1rem;
   box-shadow: 0 6px 10px -4px rgba(0,0,0,.15);
   margin-bottom: 1rem;
@@ -45,6 +47,10 @@ body {
   width: 5rem;
 }
 
+.card .author .title {
+  font-family: "Ledger", serif;
+}
+
 .card .text {
   padding: 0 1rem;
 }
@@ -55,7 +61,8 @@ body {
 }
 
 .card .text .date {
-  text-align: right;
-  margin-block-start: 1rem;
+  font-family: "Neucha", cursive;
   margin-block-end: 1rem;
+  margin-block-start: 1rem;
+  text-align: right;
 }
