--- a/styles/style.css
+++ b/styles/style.css
@@ -79,6 +79,13 @@ body {
   box-shadow: 0px 12px 19px -7px rgba(0,0,0,.3);
 }
 
+blockquote {
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+}
+
 .flex {
   display: flex;
 }
@@ -175,9 +182,10 @@ body {
   margin-top: 1rem;
 }
 
-.card .text .date {
+.card .date {
   font-family: "Neucha", cursive;
   margin-block-end: 1rem;
   margin-block-start: 1rem;
+  padding-right: 1rem;
   text-align: right;
 }
