--- a/styles/style.css
+++ b/styles/style.css
@@ -178,6 +178,12 @@ blockquote {
   text-decoration: none;
 }
 
+.card .h-card.vcard .text {
+  margin-block-end: 1em;
+  margin-block-start: 0;
+  margin-top: -13px;
+}
+
 .card .about .text p {
   margin-top: 1rem;
 }
