--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Ledger&family=Neucha&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
 
 body {
-  background: repeat url(../assets/bg.webp);
+  background: repeat url(../assets/interface/bg.webp);
   font-family: "Open Sans", sans-serif;
   line-height: 1.5;
   margin: 0;
@@ -150,7 +150,7 @@ blockquote {
 }
 
 .main-card .text .three {
-  padding-right: 26em;
+  padding-right: 27em;
 }
 
 .main-card .text .four {
