--- a/styles/style.css
+++ b/styles/style.css
@@ -89,6 +89,10 @@ blockquote {
   display: flex;
 }
 
+.wrap {
+  flex-wrap: wrap;
+}
+
 .grid-item {
   margin-bottom: 0.85%;
 }
@@ -102,14 +106,11 @@ blockquote {
   width: 1.25%;
 }
 
-#contact-page .school-section .contact-card {
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-  flex-direction: row;
+.phone {
+  min-width: 14rem;
 }
 
-.phone {
+.discord {
   min-width: 14rem;
 }
 
@@ -120,10 +121,11 @@ blockquote {
 
 .card .card-image img {
   width: 35rem;
-  height: 24.06rem;
+  height: 29.81rem;
 }
 
-.card .fa-solid {
+#contact-card .fa-solid,
+#contact-card .fa-brands {
   color: #DB3A34;
 }
 
@@ -154,7 +156,7 @@ blockquote {
 }
 
 .main-card .card-body .text p,
-.contact-card .text .info {
+#contact-card .text .info {
   margin-top: 1rem;
 }
 
@@ -178,7 +180,7 @@ blockquote {
   padding-right: 35rem;
 }
 
-.contact-card .title {
+#contact-card .title {
   margin-left: 1rem;
 }
 
