--- a/styles/style.less
+++ b/styles/style.less
@@ -9,7 +9,7 @@ body {
 
 /* Header */
 
-.header {
+#header {
   align-items: center;
   background-color: #393D3F;
   box-shadow: 0px 12px 19px -7px rgba(0,0,0,.3);
@@ -40,7 +40,7 @@ body {
       text-shadow: 0 0 1.5rem #FFB86F;
     }
   }
-  i {
+  .fa {
   color: #058ED9;
   }
 }
@@ -51,7 +51,7 @@ body {
 }
 
 #about-me-card {
-  background: no-repeat snow url(../assets/main.webp) right/51.9%;
+  background: no-repeat snow url(../assets/about-me.webp) right/51.9%;
   margin: auto;
   width: 70rem;
 }
@@ -62,8 +62,7 @@ body {
   .info {
     margin-top: 1rem;
   }
-  .fa-solid,
-  .fa-brands {
+  .fa {
     color: #DB3A34;
   }
   .title {
