--- a/styles/style.less
+++ b/styles/style.less
@@ -33,7 +33,7 @@ body {
     a {
       color: snow;
       text-decoration: none;
-      transition: all 0.15s ease-in;
+      transition: all .2s ease-in;
     }
     a:hover {
       color: #FFB86F;
@@ -83,6 +83,37 @@ body {
   }
 }
 
+#upBtn {
+  background-color: #393D3F;
+  border-radius: 3rem;
+  border: none;
+  bottom: 2rem;
+  box-shadow: 0 6px 10px -4px rgba(0,0,0,.15);
+  color: snow;
+  cursor: pointer;
+  display: none;
+  font-size: 1.5rem;
+  height: 3rem;
+  padding-top: 0.3rem;
+  position: fixed;
+  right: 2rem;
+  transition: transform .3s cubic-bezier(.34,2,.6,1), box-shadow .2s ease, background-color .2s ease, color .2s ease;
+  width: 3rem;
+  z-index: 99;
+}
+
+#upBtn:hover {
+  background-color: #FFB86F;
+  color: #393D3F;
+  box-shadow: 0px 12px 19px -7px rgba(0,0,0,.3);
+}
+
+#upBtn:active {
+  background-color: hsl(30, 100%, 55%);
+  color: #393D3F;
+  box-shadow: 0px 12px 19px -7px rgba(0,0,0,.3);
+}
+
 abbr:hover {
   color: #DB3A34;
 }
@@ -93,7 +124,7 @@ abbr:hover {
   border-radius: 1rem;
   box-shadow: 0 6px 10px -4px rgba(0,0,0,.15);
   overflow: hidden;
-  transition: transform .3s cubic-bezier(.34,2,.6,1),box-shadow .2s ease;
+  transition: transform .3s cubic-bezier(.34,2,.6,1), box-shadow .2s ease;
   z-index: 1;
   .author {
     align-items: center;
