--- a/styles/style.less
+++ b/styles/style.less
@@ -40,20 +40,61 @@ body {
       text-shadow: 0 0 1.5rem #FFB86F;
     }
   }
-  .fa {
+  i {
   color: #058ED9;
   }
 }
 
 #main {
   margin-top: 4rem;
-  padding: 0.85%;
+  padding: 1rem;
+}
+
+#review-form {
+  margin-top: -1rem;
+  margin-bottom: 1rem;
+}
+
+#review-form-card {
+  margin: auto;
+  width: 45.98rem;
+  .info {
+    margin-top: 1rem;
+  }
+  i {
+    color: #DB3A34;
+  }
+  .title {
+    margin-left: 1rem;
+  }
+  #submit-review {
+    .text {
+      margin-block-end: 1rem;
+      margin-block-start: 0;
+      margin-top: -13px;
+    }
+    #review-text {
+      width: 99.1%;
+      height: 6rem;
+    }
+  }
+  .form-full-name {
+    min-width: 20rem;
+    .text {
+      input {
+        width: 80%;
+      }
+    }
+  }
 }
 
 #about-me-card {
   background: no-repeat snow url(../assets/about-me.webp) right/51.9%;
   margin: auto;
   width: 70rem;
+  i {
+    color: #DB3A34;
+  }
 }
 
 #contact-card {
@@ -62,7 +103,7 @@ body {
   .info {
     margin-top: 1rem;
   }
-  .fa {
+  i {
     color: #DB3A34;
   }
   .title {
@@ -212,14 +253,14 @@ blockquote {
 }
 
 .grid-item {
-  margin-bottom: 0.85%;
+  margin-bottom: 1rem;
 }
 
 .grid-sizer,
 .grid-item {
-  width: 23.957%;
+  width: 22.49rem;
 }
 
 .gutter-sizer {
-  width: 1.25%;
+  width: 1rem;
 }
