--- a/styles/style.less
+++ b/styles/style.less
@@ -5,6 +5,7 @@ body {
   font-family: "Open Sans", sans-serif;
   line-height: 1.5;
   margin: 0;
+  scrollbar-gutter: stable;
 }
 
 /* Header */
@@ -414,14 +415,131 @@ blockquote {
   margin-bottom: 1rem;
 }
 
-.grid-sizer,
-.grid-item {
-  width: 22.49rem;
+@media (min-width: 2560px) {
+  .grid-sizer,
+  .grid-item {
+    width: 15.684335443037975%;
+  }
+  .gutter-sizer {
+    width: 0.8306962025316454%;
+  }
 }
 
-.gutter-sizer {
-  width: 1rem;
+@media (min-width: 1920px) and (max-width: 2559px) {
+  .grid-sizer,
+  .grid-item {
+    width: 19.001588983050848%;
+  }
+  .gutter-sizer {
+    width: 1.1652542372881356%;
+  }
 }
+
+@media (min-width: 1536px) and (max-width: 1919px) {
+  .grid-sizer,
+  .grid-item {
+    width: 23.70345744680851%;
+  }
+  .gutter-sizer {
+    width: 1.5625%;
+  }
+}
+
+@media (min-width: 1440px) and (max-width: 1535px) {
+  .grid-sizer,
+  .grid-item {
+    width: 23.615056818181817%;
+  }
+  .gutter-sizer {
+    width: 1.6690340909090908%;
+  }
+}
+
+@media (min-width: 1366px) and (max-width: 1439px) {
+  .grid-sizer,
+  .grid-item {
+    width: 23.531175059952037%;
+  }
+  .gutter-sizer {
+    width: 1.7610911270983212%;
+  }
+}
+
+@media (min-width: 1280px) and (max-width: 1365px) {
+  .grid-sizer,
+  .grid-item {
+    width: 23.517628205128204%;
+  }
+  .gutter-sizer {
+    width: 1.842948717948718%;
+  }
+}
+
+@media (min-width: 1024px) and (max-width: 1279px) {
+  .grid-sizer,
+  .grid-item {
+    width: 31.25%;
+  }
+  .gutter-sizer {
+    width: 2.620967741935484%;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .grid-sizer,
+  .grid-item {
+    width: 46.875%;
+  }
+  .gutter-sizer {
+    width: 4.166666666666666%;
+  }
+}
+
+@media (min-width: 425px) and (max-width: 767px) {
+  .grid-sizer,
+  .grid-item {
+    width: 92.61176470588236%;
+  }
+}
+
+@media (min-width: 412px) and (max-width: 424px) {
+  .grid-sizer,
+  .grid-item {
+    width: 92.23684210526316%;
+  }
+}
+
+@media (min-width: 390px) and (max-width: 411px) {
+  .grid-sizer,
+  .grid-item {
+    width: 91.79687500000001%;
+  }
+}
+
+@media (min-width: 375px) and (max-width: 389px) {
+  .grid-sizer,
+  .grid-item {
+    width: 91.52%;
+  }
+}
+
+@media (min-width: 360px) and (max-width: 374px) {
+  .grid-sizer,
+  .grid-item {
+    width: 91.15853658536585%;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 359px) {
+  .grid-sizer,
+  .grid-item {
+    width: 90%;
+  }
+}
+
+// .gutter-sizer {
+//   width: 1rem;
+// }
 
 fieldset {
   border: none;
