--- a/styles/style.less
+++ b/styles/style.less
@@ -418,10 +418,10 @@ blockquote {
 @media (min-width: 2560px) {
   .grid-sizer,
   .grid-item {
-    width: 15.684335443037975%;
+    width: 15.947265625000002%;
   }
   .gutter-sizer {
-    width: 0.8306962025316454%;
+    width: 1.3rem;
   }
 }
 
@@ -431,7 +431,7 @@ blockquote {
     width: 19.001588983050848%;
   }
   .gutter-sizer {
-    width: 1.1652542372881356%;
+    width: 1.375rem;
   }
 }
 
@@ -441,7 +441,7 @@ blockquote {
     width: 23.70345744680851%;
   }
   .gutter-sizer {
-    width: 1.5625%;
+    width: 1.475rem;
   }
 }
 
@@ -451,37 +451,37 @@ blockquote {
     width: 23.615056818181817%;
   }
   .gutter-sizer {
-    width: 1.6690340909090908%;
+    width: 1.475rem;
   }
 }
 
 @media (min-width: 1366px) and (max-width: 1439px) {
   .grid-sizer,
   .grid-item {
-    width: 23.531175059952037%;
+    width: 23.538669064748202%;
   }
   .gutter-sizer {
-    width: 1.7610911270983212%;
+    width: 1.475rem;
   }
 }
 
 @media (min-width: 1280px) and (max-width: 1365px) {
   .grid-sizer,
   .grid-item {
-    width: 23.517628205128204%;
+    width: 23.4375%;
   }
   .gutter-sizer {
-    width: 1.842948717948718%;
+    width: 1.475rem;
   }
 }
 
 @media (min-width: 1024px) and (max-width: 1279px) {
   .grid-sizer,
   .grid-item {
-    width: 31.25%;
+    width: 31.260080645161292%;
   }
   .gutter-sizer {
-    width: 2.620967741935484%;
+    width: 1.625rem;
   }
 }
 
@@ -491,14 +491,40 @@ blockquote {
     width: 46.875%;
   }
   .gutter-sizer {
-    width: 4.166666666666666%;
+    width: 1.95rem;
+  }
+  #header > div > span {
+    display: none;
+  }
+  #header > div::after {
+    content: "МАРКЕЛОВ А. В.";
   }
 }
 
-@media (min-width: 425px) and (max-width: 767px) {
+@media (min-width: 720px) and (max-width: 767px) {
   .grid-sizer,
   .grid-item {
-    width: 92.61176470588236%;
+    width: 46.656976744186046%;
+  }
+  .gutter-sizer {
+    width: 1.95rem;
+  }
+  #header {
+    .logo {
+      span {
+        display: none;
+      }
+    }
+    .logo::after {
+      content: "МАРКЕЛОВ А. В.";
+    }
+  }
+}
+
+@media (min-width: 425px) and (max-width: 719px) {
+  .grid-sizer,
+  .grid-item {
+    width: 92.47967479674796%;
   }
 }
 
@@ -536,10 +562,6 @@ blockquote {
     width: 90%;
   }
 }
-
-// .gutter-sizer {
-//   width: 1rem;
-// }
 
 fieldset {
   border: none;
