--- a/styles/style.less
+++ b/styles/style.less
@@ -26,6 +26,14 @@ body {
     color: snow;
     flex-grow: 1;
     padding-left: 2rem;
+    .main-logo {
+      abbr {
+        padding: 1.3rem 0;
+      }
+      abbr:hover {
+        color: #058ED9;
+      }
+    }
     .hamburger-menu {
       background-color: transparent;
       border: none;
@@ -79,21 +87,25 @@ body {
       }
     }
   }
-  li {
-    display: inline;
-    padding-right: 2rem;
-    a {
-      color: snow;
-      text-decoration: none;
-      transition: all .2s ease-in;
-    }
-    a:hover {
-      color: #FFB86F;
-      text-shadow: 0 0 1.5rem #FFB86F;
-    }
-    a:active {
-      color: hsl(30, 100%, 55%);
-      text-shadow: 0 0 1.5rem hsl(30, 100%, 55%);
+  ul {
+    padding-right: 1.1rem;
+    li {
+      display: inline-block;
+      background-clip: border-box;
+      a {
+        color: snow;
+        padding: 1.3rem 0.9rem;
+        text-decoration: none;
+        transition: all .2s ease-in;
+      }
+      a:hover {
+        color: #FFB86F;
+        text-shadow: 0 0 1.5rem #FFB86F;
+      }
+      a:active {
+        color: hsl(30, 100%, 55%);
+        text-shadow: 0 0 1.5rem hsl(30, 100%, 55%);
+      }
     }
   }
   i {
@@ -265,7 +277,8 @@ body {
 }
 
 #about-me-card {
-  background: no-repeat snow url(../assets/about-me.webp) right/51.9%;
+  background: no-repeat snow url(../assets/about-me.webp) right/53.2%;
+  background-position: 104%;
   margin: auto;
   width: 70rem;
   i {
@@ -398,10 +411,10 @@ abbr:hover {
     text-align: right;
   }
   .card-image {
-    margin-bottom: -0.5rem;
+    margin-bottom: -0.6rem;
     min-width: 35rem;
     img {
-      height: 29.81rem;
+      height: 29.83rem;
       width: 35rem;
     }
   }
@@ -425,7 +438,7 @@ abbr:hover {
     }
     .first {
       margin-top: 1rem;
-      padding-right: 34rem;
+      padding-right: 36rem;
     }
     .second {
       margin-top: 1rem;
@@ -437,7 +450,7 @@ abbr:hover {
     }
     .fourth {
       margin-top: 1rem;
-      padding-right: 33rem;
+      padding-right: 33.5rem;
     }
     .fifth {
       margin-top: 1rem;
