--- a/styles/style.less
+++ b/styles/style.less
@@ -1,17 +1,30 @@
 @import url("https://fonts.googleapis.com/css2?family=Ledger&family=Neucha&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
 
+:root {
+  --bg-color: #78cb9d;
+  --interact-color-darker: hsl(27, 70%, 50%);
+  --interact-color: #e7a977;
+  --main-color: snow;
+  --primary-accent-color: #2e3133;
+  --primary-text-color: #333333;
+  --secondary-accent-color: #058ed9;
+  --secondary-text-color: #f0f0f0;
+  --tertiary-accent-color: #dd3b01;
+}
+
 body {
   background: repeat url(../assets/interface/bg.webp);
   font-family: "Open Sans", sans-serif;
   line-height: 1.5;
   margin: 0;
   scrollbar-gutter: stable;
+  color: var(--primary-text-color);
 }
 
 /* Header */
 #header {
   align-items: center;
-  background-color: #393D3F;
+  background-color: var(--primary-accent-color);
   box-shadow: 0px 12px 19px -7px rgba(0,0,0,.3);
   display: flex;
   font-size: 1.1rem;
@@ -23,7 +36,7 @@ body {
   width: 100%;
   z-index: 3;
   .logo {
-    color: snow;
+    color: var(--secondary-text-color);
     flex-grow: 1;
     padding-left: 2rem;
     .main-logo {
@@ -31,13 +44,13 @@ body {
         padding: 1.3rem 0;
       }
       abbr:hover {
-        color: #058ED9;
+        color: var(--secondary-accent-color);
       }
     }
     .hamburger-menu {
       background-color: transparent;
       border: none;
-      color: snow;
+      color: var(--secondary-text-color);
       cursor: pointer;
       display: none;
       font-family: "Open Sans", sans-serif;
@@ -53,16 +66,16 @@ body {
           width: 14.3rem;
         }
         .HamTitle:hover {
-          color: #FFB86F;
-          text-shadow: 0 0 1.5rem #FFB86F;
+          color: var(--interact-color);
+          text-shadow: 0 0 1.5rem var(--interact-color);
         }
         .HamTitle:active {
-          color: hsl(30, 100%, 55%);
-          text-shadow: 0 0 1.5rem hsl(30, 100%, 55%);
+          color: var(--interact-color-darker);
+          text-shadow: 0 0 1.5rem var(--interact-color-darker);
         }
       }
       .pos-title {
-        background-color: #393D3F;
+        background-color: var(--primary-accent-color);
         border-radius: 0 0 0.5rem 0.5rem;
         margin-top: 12.1rem;
       }
@@ -93,23 +106,23 @@ body {
       display: inline-block;
       background-clip: border-box;
       a {
-        color: snow;
+        color: var(--secondary-text-color);
         padding: 1.3rem 0.9rem;
         text-decoration: none;
         transition: all .2s ease-in;
       }
       a:hover {
-        color: #FFB86F;
-        text-shadow: 0 0 1.5rem #FFB86F;
+        color: var(--interact-color);
+        text-shadow: 0 0 1.5rem var(--interact-color);
       }
       a:active {
-        color: hsl(30, 100%, 55%);
-        text-shadow: 0 0 1.5rem hsl(30, 100%, 55%);
+        color: var(--interact-color-darker);
+        text-shadow: 0 0 1.5rem var(--interact-color-darker);
       }
     }
   }
   i {
-  color: #058ED9;
+  color: var(--secondary-accent-color);
   }
 }
 
@@ -146,7 +159,7 @@ body {
     margin-top: 1rem;
   }
   i {
-    color: #DB3A34;
+    color: var(--tertiary-accent-color);
   }
   .title {
     margin-left: 1rem;
@@ -167,7 +180,7 @@ body {
     .form-full-name {
       #review-full-name {
         border-radius: 1rem;
-        border: 0.2rem solid #393D3F;
+        border: 0.2rem solid var(--primary-accent-color);
         font-family: "Open Sans", sans-serif;
         font-size: 1rem;
         height: 1.5rem;
@@ -177,11 +190,11 @@ body {
         width: 12.75rem;
       }
       #review-full-name:hover {
-        border: 0.2rem solid #FFB86F;
+        border: 0.2rem solid var(--interact-color);
         box-shadow: 0 0 19px -7px rgba(0,0,0,.3);
       }
       #review-full-name:focus-visible {
-        border: 0.2rem solid hsl(30, 100%, 55%);
+        border: 0.2rem solid var(--interact-color-darker);
         box-shadow: 0 0 19px -7px rgba(0,0,0,.3);
         outline: none;
       }
@@ -194,10 +207,10 @@ body {
         font-size: 1rem;
       }
       #review-photo::file-selector-button {
-        background-color: #393D3F;
+        background-color: var(--primary-accent-color);
         border-radius: 1rem;
         border: none;
-        color: snow;
+        color: var(--secondary-text-color);
         cursor: pointer;
         font-family: "Open Sans", sans-serif;
         font-weight: bold;
@@ -207,21 +220,21 @@ body {
         width: 11rem;
       }
       #review-photo::file-selector-button:hover {
-        background-color: #FFB86F;
+        background-color: var(--interact-color);
         box-shadow: 0 0 19px -7px rgba(0,0,0,.3);
-        color: #393D3F;
+        color: var(--primary-accent-color);
       }
       #review-photo::file-selector-button:active {
-        background-color: hsl(30, 100%, 55%);
+        background-color: var(--interact-color-darker);
         box-shadow: 0 0 19px -7px rgba(0,0,0,.3);
-        color: #393D3F;
+        color: var(--primary-accent-color);
       }
     }
 
     .form-text {
       #review-text {
         border-radius: 1rem;
-        border: 0.2rem solid #393D3F;
+        border: 0.2rem solid var(--primary-accent-color);
         font-family: "Open Sans", sans-serif;
         font-size: 1rem;
         height: 11rem;
@@ -232,21 +245,21 @@ body {
         width: 34.2rem;
       }
       #review-text:hover {
-        border: 0.2rem solid #FFB86F;
+        border: 0.2rem solid var(--interact-color);
         box-shadow: 0 0 19px -7px rgba(0,0,0,.3);
       }
       #review-text:focus-visible {
-        border: 0.2rem solid hsl(30, 100%, 55%);
+        border: 0.2rem solid var(--interact-color-darker);
         box-shadow: 0 0 19px -7px rgba(0,0,0,.3);
         outline: none;
       }
     }
 
     #submit {
-      background-color: #393D3F;
+      background-color: var(--primary-accent-color);
       border-radius: 1rem;
       border: none;
-      color: snow;
+      color: var(--secondary-text-color);
       cursor: pointer;
       font-family: "Open Sans", sans-serif;
       font-size: 1rem;
@@ -257,14 +270,14 @@ body {
       width: 15rem;
     }
     #submit:hover {
-      background-color: #FFB86F;
+      background-color: var(--interact-color);
       box-shadow: 0 0 19px -7px rgba(0,0,0,.3);
-      color: #393D3F;
+      color: var(--primary-accent-color);
     }
     #submit:active {
-      background-color: hsl(30, 100%, 55%);
+      background-color: var(--interact-color-darker);
       box-shadow: 0 0 19px -7px rgba(0,0,0,.3);
-      color: #393D3F;
+      color: var(--primary-accent-color);
     }
 
     .pos {
@@ -277,12 +290,12 @@ body {
 }
 
 #about-me-card {
-  background: no-repeat snow url(../assets/about-me.webp) right/53.2%;
+  background: no-repeat var(--main-color) url(../assets/about-me.webp) right/53.2%;
   background-position: 104%;
   margin: auto;
   width: 70rem;
   i {
-    color: #DB3A34;
+    color: var(--tertiary-accent-color);
   }
 }
 
@@ -293,7 +306,7 @@ body {
     margin-top: 1rem;
   }
   i {
-    color: #DB3A34;
+    color: var(--tertiary-accent-color);
   }
   .title {
     margin-left: 1rem;
@@ -314,12 +327,12 @@ body {
 }
 
 #upBtn {
-  background-color: #393D3F;
+  background-color: var(--primary-accent-color);
   border-radius: 3rem;
   border: none;
   bottom: 1.5rem;
   box-shadow: 0 6px 10px -4px rgba(0,0,0,.15);
-  color: snow;
+  color: var(--secondary-text-color);
   cursor: pointer;
   display: none;
   font-size: 1.5rem;
@@ -332,22 +345,22 @@ body {
   z-index: 99;
 }
 #upBtn:hover {
-  background-color: #FFB86F;
+  background-color: var(--interact-color);
   box-shadow: 0 0 19px -7px rgba(0,0,0,.3);
-  color: #393D3F;
+  color: var(--primary-accent-color);
 }
 #upBtn:active {
-  background-color: hsl(30, 100%, 55%);
+  background-color: var(--interact-color-darker);
   box-shadow: 0 0 19px -7px rgba(0,0,0,.3);
-  color: #393D3F;
+  color: var(--primary-accent-color);
 }
 
 #reviewBtn {
-  background-color: #393D3F;
+  background-color: var(--primary-accent-color);
   border-radius: 3rem;
   border: none;
   bottom: 1.5rem;
-  color: snow;
+  color: var(--secondary-text-color);
   cursor: pointer;
   font-size: 1.5rem;
   height: 3rem;
@@ -359,14 +372,14 @@ body {
   z-index: 99;
 }
 #reviewBtn:hover {
-  background-color: #FFB86F;
+  background-color: var(--interact-color);
   box-shadow: 0 0 19px -7px rgba(0,0,0,.3);
-  color: #393D3F;
+  color: var(--primary-accent-color);
 }
 #reviewBtn:active {
-  background-color: hsl(30, 100%, 55%);
+  background-color: var(--interact-color-darker);
   box-shadow: 0 0 19px -7px rgba(0,0,0,.3);
-  color: #393D3F;
+  color: var(--primary-accent-color);
 }
 
 #reviewCloseBtn {
@@ -379,12 +392,12 @@ body {
 }
 
 abbr:hover {
-  color: #DB3A34;
+  color: var(--tertiary-accent-color);
 }
 
 .card {
   background-clip: border-box;
-  background-color: snow;
+  background-color: var(--main-color);
   border-radius: 1rem;
   box-shadow: 0 6px 10px -4px rgba(0,0,0,.15);
   overflow: hidden;
@@ -425,7 +438,7 @@ abbr:hover {
   .text {
     padding: 0 1rem;
     a {
-      color: #058ED9;
+      color: var(--secondary-accent-color);
       text-decoration: none;
     }
     a:hover {
